[package]
name = "lyronc"
version = "0.0.1"
authors = ["Nafi Amaan Hossain"]
edition = "2018"

description = "A simple 'TOY' language."
license = "MIT"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.70"

clap = "2.33.0"

log = "0.4.8"
env_logger = "0.7.1"
serde = "1.0.188"
serde_json = "1.0.107"
owo-colors = "3.5.0"
cranelift = "0.102.0"
cranelift-jit = "0.102.0"
cranelift-module = "0.102.0"
cranelift-native = "0.102.0"
